--- a/nvidia.yaml
+++ b/nvidia.yaml
@@ -3,9 +3,16 @@ repo-packages:
     packages:
       - 'kmod-nvidia*'
 
-packages:
-  - xorg-x11-drv-nvidia-cuda
-  - xorg-x11-drv-nvidia-power
+  - repo: rpmfusion-nonfree-rawhide
+    packages:
+      - nvidia-modprobe
+      - nvidia-persistenced
+      - nvidia-settings
+      - xorg-x11-drv-nvidia
+      - xorg-x11-drv-nvidia-cuda
+      - xorg-x11-drv-nvidia-cuda-libs
+      - xorg-x11-drv-nvidia-libs
+      - xorg-x11-drv-nvidia-power
 
 postprocess:
   - |
