--- a/nvidia.yaml
+++ b/nvidia.yaml
@@ -3,7 +3,7 @@ repo-packages:
     packages:
       - 'kmod-nvidia*'
 
-  - repo: rpmfusion-nonfree-rawhide
+  - repo: rpmfusion-nonfree-nvidia-driver-rawhide
     packages:
       - nvidia-modprobe
       - nvidia-persistenced
@@ -13,6 +13,10 @@ repo-packages:
       - xorg-x11-drv-nvidia-cuda-libs
       - xorg-x11-drv-nvidia-libs
       - xorg-x11-drv-nvidia-power
+
+  - repo: copr:copr.fedorainfracloud.org:solopasha:playground
+    packages:
+      - nvidia-container-toolkit
 
 postprocess:
   - |
