--- a/.github/workflows/buildroot.yml
+++ b/.github/workflows/buildroot.yml
@@ -29,7 +29,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: ghcr.io/${{ github.repository_owner }}/buildroot
+          images: ghcr.io/${{ github.repository }}/buildroot
           tags: |
             type=raw,value=latest
 
