--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,12 +26,26 @@ jobs:
       options: --privileged
 
     steps:
+      - name: Repo
+        run: |
+          cat << 'EOF' > /etc/yum.repos.d/rpmfusion-nonfree-nvidia-driver.repo
+          [rpmfusion-nonfree-nvidia-driver-rawhide]
+          name=RPM Fusion for Fedora - Nonfree - NVIDIA Driver
+          baseurl=https://download1.rpmfusion.org/nonfree/fedora/nvidia-driver/43/$basearch/
+          #metalink=https://mirrors.rpmfusion.org/metalink?repo=nonfree-fedora-nvidia-driver-43&arch=$basearch
+          enabled=1
+          type=rpm-md
+          gpgcheck=1
+          repo_gpgcheck=0
+          gpgkey=file:///usr/share/distribution-gpg-keys/rpmfusion/RPM-GPG-KEY-rpmfusion-nonfree-fedora-43
+          skip_if_unavailable=True
+          EOF
+
       - name: Get latest kernel and nvidia version
         id: kernelver
         run: |
           echo "kernelver=$(dnf -q --refresh rq kernel --latest-limit=1 --qf '%{VERSION}-%{RELEASE}.%{ARCH}')" >> $GITHUB_OUTPUT
-          echo "nvidiaver=$(dnf -q --repofrompath='rpmfusion,https://download1.rpmfusion.org/nonfree/fedora/development/rawhide/Everything/$basearch/os/' \
-                          --disablerepo=\* --enablerepo=rpmfusion \
+          echo "nvidiaver=$(dnf -y -q --disablerepo=\* --enablerepo=rpmfusion-nonfree-nvidia-driver-rawhide \
                           rq akmod-nvidia --latest-limit=1 --qf '%{VERSION}-%{RELEASE}.%{ARCH}')" >> $GITHUB_OUTPUT
 
       - name: Check if kmod is up to date
@@ -57,7 +71,6 @@ jobs:
           rpm --import /usr/share/distribution-gpg-keys/rpmfusion/RPM-GPG-KEY-rpmfusion-nonfree-fedora-$(rpm -E %fedora)
           dnf -y --setopt=localpkg_gpgcheck=1 install https://mirrors.rpmfusion.org/free/fedora/rpmfusion-free-release-$(rpm -E %fedora).noarch.rpm \
             https://mirrors.rpmfusion.org/nonfree/fedora/rpmfusion-nonfree-release-$(rpm -E %fedora).noarch.rpm
-          dnf in -y rpmfusion-nonfree-release-rawhide
 
           cat << EOF > ~/.rpmmacros
           %_signature gpg
@@ -87,7 +100,7 @@ jobs:
         if: steps.repocache.outputs.cache-hit != 'true'
         run: |
           echo "%_with_kmod_nvidia_open 1" > /etc/rpm/macros.nvidia-kmod
-          dnf -y in --enablerepo=rpmfusion-nonfree-rawhide --setopt=install_weak_deps=0 akmod-nvidia-${{ steps.kernelver.outputs.nvidiaver }}
+          dnf -y in --setopt=install_weak_deps=0 akmod-nvidia-${{ steps.kernelver.outputs.nvidiaver }}
           akmods --force --kernel "${{ steps.kernelver.outputs.kernelver }}"
           modinfo /usr/lib/modules/"${{ steps.kernelver.outputs.kernelver }}"/extra/nvidia/nvidia{,-drm,-modeset,-peermem,-uvm}.ko > /dev/null || \
             (cat /var/cache/akmods/nvidia/*-for-*.log && exit 1)
