--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -140,32 +140,13 @@ jobs:
       contents: read
     container:
       image: ghcr.io/${{ github.repository }}/buildroot:latest
-      options: --privileged --volume /:/run/host:rw
+      options: --privileged
     env:
       IMAGENAME: ghcr.io/${{ github.repository }}/kde-unstable-atomic
 
     steps:
-      - name: Reclaim disk space
-        run: |
-          rm -rf /run/host/usr/local/lib/android /run/host/usr/share/dotnet /run/host/opt/ghc /run/host/opt/hostedtoolcache
-
       - name: Prepare
         run: |
-          dnf -y up && dnf -y install \
-            bsdtar \
-            buildah \
-            dbus-daemon \
-            distribution-gpg-keys \
-            file \
-            git-core \
-            jq \
-            ostree \
-            podman \
-            rpm-ostree \
-            selinux-policy-targeted \
-            skopeo \
-            tar \
-            zstd
           cat << EOF > /etc/containers/registries.d/sigstore.yaml
           docker:
             $IMAGENAME:
@@ -173,19 +154,10 @@ jobs:
           EOF
           cp /usr/share/distribution-gpg-keys/rpmfusion/RPM-GPG-KEY-rpmfusion-free-fedora-$(rpm -E %fedora) /etc/pki/rpm-gpg/
           cp /usr/share/distribution-gpg-keys/rpmfusion/RPM-GPG-KEY-rpmfusion-nonfree-fedora-$(rpm -E %fedora) /etc/pki/rpm-gpg/
-          dnf clean all
 
       - uses: actions/checkout@v4
         with:
           persist-credentials: false
-
-      # - name: Restore cache
-      #   id: cache
-      #   uses: actions/cache/restore@v4
-      #   with:
-      #     path: buildcache.tar.zst
-      #     key: build-${{ steps.get-buildid.outputs.buildid }}
-      #     restore-keys: build-
 
       - name: Download nvidia repo
         uses: actions/cache/restore@v4
@@ -215,17 +187,13 @@ jobs:
         id: build
         run: |
           cp RPM-GPG-KEY-${{ github.repository_owner }} /etc/pki/rpm-gpg/
-          if [[ -f "buildcache.tar.zst" ]]; then
-            bsdtar --acls --xattrs -xpzf buildcache.tar.zst
-            rm buildcache.tar.zst
-          fi
           mkdir -p cache
 
           version="$(rpm-ostree compose tree --print-only kinoite.yaml | jq -r '."mutate-os-release"')"
           echo "version=${version}" >> $GITHUB_OUTPUT
           echo "Composing kinoite ${version}.${{ steps.get-buildid.outputs.buildid }} ..."
 
-          rpm-ostree compose image --cachedir=cache --initialize \
+          LD_PRELOAD=/usr/lib64/nosync/nosync.so rpm-ostree compose image --cachedir=cache --initialize \
               --max-layers 96 --format oci \
               "kinoite.yaml" \
               "kinoite-build"
@@ -255,14 +223,3 @@ jobs:
               "docker://${IMAGENAME}:${{ steps.build.outputs.version }}.${{ steps.get-buildid.outputs.buildid }}" \
               "docker://${IMAGENAME}:${{ steps.build.outputs.version }}" && break || sleep $((5 * i))
           done
-
-      # - name: Compress the cache directory manually to preserve xattrs
-      #   run: |
-      #     bsdtar --zstd --options zstd:compression-level=16,zstd:threads=0 --acls --xattrs -cpaf buildcache.tar.zst cache
-
-      # - name: Save cache
-      #   id: cache-save
-      #   uses: actions/cache/save@v4
-      #   with:
-      #     path: buildcache.tar.zst
-      #     key: ${{ steps.cache.outputs.cache-primary-key }}
