--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -193,7 +193,7 @@ jobs:
           echo "version=${version}" >> $GITHUB_OUTPUT
           echo "Composing kinoite ${version}.${{ steps.get-buildid.outputs.buildid }} ..."
 
-          LD_PRELOAD=/usr/lib64/nosync/nosync.so rpm-ostree compose image --cachedir=cache --initialize \
+          rpm-ostree compose image --cachedir=cache --initialize \
               --max-layers 96 --format oci \
               "kinoite.yaml" \
               "kinoite-build"
