--- a/kinoite.yaml
+++ b/kinoite.yaml
@@ -23,6 +23,7 @@ packages:
   - sddm
   - udisks2
   - vlc-plugin-gstreamer
+  - 'qt6-qtwayland-6.9.1-1.fc42'
 
 repo-packages:
   - repo: coprdep:copr.fedorainfracloud.org:solopasha:plasma-unstable
@@ -133,3 +134,4 @@ repos:
   - nvidia-kmod
   - copr:copr.fedorainfracloud.org:solopasha:playground
   - copr:copr.fedorainfracloud.org:solopasha:kitty
+  - updates-archive
