--- a/nvidia.yaml
+++ b/nvidia.yaml
@@ -24,11 +24,11 @@ postprocess:
     set -xeuo pipefail
 
     cat > /usr/lib/dracut/dracut.conf.d/00-nvidia.conf << 'EOF'
-    kernel_cmdline+=" rd.driver.blacklist=nouveau "
+    kernel_cmdline+=" rd.driver.blacklist=nouveau,nova_core "
     EOF
 
     cat > /usr/lib/bootc/kargs.d/00-nvidia.toml << 'EOF'
-    kargs = ["rd.driver.blacklist=nouveau", "modprobe.blacklist=nouveau", "nvidia-drm.modeset=1"]
+    kargs = ["rd.driver.blacklist=nouveau,nova_core", "modprobe.blacklist=nouveau"]
     EOF
 
     sed -i 's/omit_drivers/force_drivers/' /usr/lib/dracut/dracut.conf.d/99-nvidia-dracut.conf
