--- a/kinoite.yaml
+++ b/kinoite.yaml
@@ -23,7 +23,7 @@ packages:
   - sddm
   - udisks2
   - vlc-plugin-gstreamer
-  - 'qt6-qtwayland-6.9.1-3.fc42'
+  - "'qt6-qtwayland >= 6.9.1-3'"
 
 repo-packages:
   - repo: coprdep:copr.fedorainfracloud.org:solopasha:plasma-unstable
