--- a/kinoite.yaml
+++ b/kinoite.yaml
@@ -125,11 +125,7 @@ repos:
   - fedora-cisco-openh264
   - copr:copr.fedorainfracloud.org:solopasha:kde-gear-unstable
   - coprdep:copr.fedorainfracloud.org:solopasha:plasma-unstable
-  - rpmfusion-free
-  - rpmfusion-free-updates
-  - rpmfusion-nonfree
-  - rpmfusion-nonfree-updates
-  - rpmfusion-nonfree-nvidia-driver-rawhide
   - nvidia-kmod
+  - nvidia-build
   - copr:copr.fedorainfracloud.org:solopasha:playground
   - copr:copr.fedorainfracloud.org:solopasha:kitty
