--- a/common.yaml
+++ b/common.yaml
@@ -127,6 +127,7 @@ packages:
   - hyperv-daemons
   - intel-audio-firmware
   - intel-gpu-firmware
+  - intel-media-driver
   - intel-vsc-firmware
   - iproute
   - iptables-nft
@@ -142,7 +143,9 @@ packages:
   - kitty
   - langpacks-en
   - less
+  - libavcodec-freeworld
   - libglvnd-gles
+  - libheif-freeworld
   - libva-intel-media-driver
   - linux-firmware
   - logrotate
@@ -176,6 +179,7 @@ packages:
   - passwdqc
   - pciutils
   - pipewire-alsa
+  - pipewire-codec-aptx
   - pipewire-gstreamer
   - pipewire-jack-audio-connection-kit
   - pipewire-pulseaudio
@@ -194,6 +198,8 @@ packages:
   - rpm
   - rpm-ostree
   - rpm-sign-libs
+  - rpmfusion-free-release
+  - rpmfusion-nonfree-release
   - rsync
   - samba-client
   - scx-scheds
