--- a/kinoite.yaml
+++ b/kinoite.yaml
@@ -122,9 +122,12 @@ exclude-packages:
 repos:
   - fedora
   - updates
-  - fedora-cisco-openh264
   - copr:copr.fedorainfracloud.org:solopasha:kde-gear-unstable
   - coprdep:copr.fedorainfracloud.org:solopasha:plasma-unstable
+  - rpmfusion-free
+  - rpmfusion-free-updates
+  - rpmfusion-nonfree
+  - rpmfusion-nonfree-updates
   - nvidia-kmod
   - nvidia-build
   - copr:copr.fedorainfracloud.org:solopasha:playground
