--- a/common.yaml
+++ b/common.yaml
@@ -245,6 +245,9 @@ packages:
 # Make sure the following are not pulled in when Recommended by other packages
 exclude-packages:
   - PackageKit
+  - gstreamer1-plugin-openh264
+  - mozilla-openh264
+  - openh264
   # Do not include dnf4
   - dnf
   - dnf-plugins-core
