--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -150,25 +150,43 @@ jobs:
         run: |
           sed -i "s|@@PATH@@|$(realpath nvidia-kmod-repo)|" nvidia.repo
 
-      - name: Get buildid
-        id: get-buildid
+      - name: Figure out version
+        id: buildid
         run: |
-          echo "buildid=$(date -u "+%Y%m%d.%H%M")" >> $GITHUB_OUTPUT
+          set -x
+          date_now="$(date -u "+%Y%m%d")"
+          fedora_version="$(rpm-ostree compose tree --print-only kinoite.yaml | jq -r '."mutate-os-release"')"
+          version_remote="$(skopeo inspect "docker://${IMAGENAME}:${fedora_version}" | jq -r '.Labels."org.opencontainers.image.version"' || :)"
+          if [[ -n "${version_remote}" ]]; then
+            date_remote="${version_remote%\.*}"
+            date_remote="${date_remote#*\.}"
+          fi
+          if [[ "${date_now}" == "${date_remote}" ]]; then
+            patch="${version_remote##*\.}"
+            ((patch++)) || true
+            buildid="${date_now}.${patch}"
+          else
+            buildid="${date_now}.0"
+          fi
+
+          echo "fedora_version=${fedora_version}" >> $GITHUB_OUTPUT
+          echo "buildid=${buildid}" >> $GITHUB_OUTPUT
 
       - name: Build
-        id: build
         run: |
           cp RPM-GPG-KEY-${{ github.repository_owner }} /etc/pki/rpm-gpg/
           mkdir -p cache
 
-          version="$(rpm-ostree compose tree --print-only kinoite.yaml | jq -r '."mutate-os-release"')"
-          echo "version=${version}" >> $GITHUB_OUTPUT
-          echo "Composing kinoite ${version}.${{ steps.get-buildid.outputs.buildid }} ..."
+          echo "Composing kinoite ${{ steps.buildid.outputs.fedora_version }}.${{ steps.buildid.outputs.buildid }} ..."
 
-          rpm-ostree compose image --cachedir=cache --initialize \
-              --max-layers 96 --format oci \
-              "kinoite.yaml" \
-              "kinoite-build"
+          rpm-ostree compose image \
+            --cachedir=cache \
+            --initialize \
+            --max-layers 96 \
+            --format oci \
+            --label="org.opencontainers.image.version=${{ steps.buildid.outputs.buildid }}" \
+            "kinoite.yaml" \
+            "kinoite-build"
 
       - name: Key
         env:
@@ -187,11 +205,11 @@ jobs:
           for i in {1..5}; do
             skopeo copy ${SKOPEO_ARGS} \
               "oci:kinoite-build" \
-              "docker://${IMAGENAME}:${{ steps.build.outputs.version }}.${{ steps.get-buildid.outputs.buildid }}" && break || sleep $((5 * i))
+              "docker://${IMAGENAME}:${{ steps.buildid.outputs.fedora_version }}.${{ steps.buildid.outputs.buildid }}" && break || sleep $((5 * i))
           done
 
           for i in {1..5}; do
             skopeo copy ${SKOPEO_ARGS} \
-              "docker://${IMAGENAME}:${{ steps.build.outputs.version }}.${{ steps.get-buildid.outputs.buildid }}" \
-              "docker://${IMAGENAME}:${{ steps.build.outputs.version }}" && break || sleep $((5 * i))
+              "docker://${IMAGENAME}:${{ steps.buildid.outputs.fedora_version }}.${{ steps.buildid.outputs.buildid }}" \
+              "docker://${IMAGENAME}:${{ steps.buildid.outputs.fedora_version }}" && break || sleep $((5 * i))
           done
