--- a/common.yaml
+++ b/common.yaml
@@ -93,6 +93,7 @@ packages:
   - e2fsprogs
   - ethtool
   - exfatprogs
+  - fedora-appstream-metadata
   - fedora-flathub-remote
   - fedora-repos-archive
   - fedora-repos-ostree
