--- a/kinoite.yaml
+++ b/kinoite.yaml
@@ -26,7 +26,7 @@ packages:
   - "'qt6-qtwayland >= 6.9.1-3'"
 
 repo-packages:
-  - repo: coprdep:copr.fedorainfracloud.org:solopasha:plasma-unstable
+  - repo: ghcr-kde
     packages:
       - bluedevil
       - breeze-icon-theme
@@ -134,3 +134,4 @@ repos:
   - copr:copr.fedorainfracloud.org:solopasha:playground
   - copr:copr.fedorainfracloud.org:solopasha:kitty
   - kernel-koji
+  - ghcr-kde
