--- a/initramfs.yaml
+++ b/initramfs.yaml
@@ -48,5 +48,5 @@ postprocess:
     # Compress initrd with zstd.  dracut defaults to -15, but we want the
     # maximum reasonable compression, so override the command line to use
     # dracut's defaults along with -19.
-    compress="zstd --ultra -20 -q -T0"
+    compress="zstd -19 -q -T0"
     EOF
